[package]
name = "edward"
authors = ["Arthur Henrique <arthur393@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "split large unicode file into chunks"
readme = "README.md"
repository = "https://github.com/arthurhenrique/edward"
keywords = ["edward scissorhands", "split", "unicode"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.4"
